# xivtools

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  config.toml  keymaps.au3  macros.toml  main.au3  notes.txt  recipes.au3  settings.toml  xiv_craft.au3
.github/workflows/: rust.yml
garland/: Cargo.toml
garland/src/: lib.rs
gui-support/: Cargo.toml
gui-support/src/: lib.rs
macros/: easy70  example_macro.txt  non-specialist 4 star 70.txt  palladium.txt  shb_80_dura_leves  specialist 4 star 35.txt  specialist 4 star 70.txt  turn-ins.txt
process/: Cargo.toml
process/src/: lib.rs
recipes/: black willow lumber.txt  cunning tea.txt  easy 70.txt  matcha.txt  non-specialist 4 star 35.txt  recipes.txt  weeklies.txt
src/: craft.rs  cross.rs  garland.rs  macros.rs  main.rs  recipe.rs  role_actions.rs  task.rs  test_macro  ui.rs  xiv_macro.rs  xiv_ui.rs
talan/: CHANGELOG  Cargo.toml  build.rs  macros.toml
talan/macros/: shb_80_dura_leves
talan/src/: action.rs  config.rs  craft.rs  gui.rs  lists.rs  macros.rs  main.rs  recipe.rs  role_actions.rs  rpc.rs  task.rs  test_macro
talan/src/gui/: mod.rs  support.rs
turn-in/: Cargo.toml
turn-in/src/: main.rs
ventures/: Cargo.toml  build.rs
ventures/src/: main.rs  retainer.rs
xiv/: Cargo.toml
xiv/src/: citystate.rs  classjob.rs  lib.rs  ui.rs  venture.rs
xiv/src/remote/: craft.rs  mod.rs  retainer.rs
xivapi/: Cargo.toml
xivapi/src/: lib.rs
