[package]
authors = ["Christopher Anderson <chris@nullcode.org>"]
edition = "2018"
name = "talan"
version = "0.5.0"

[dependencies]
config = "0.9.0"
regex = "1"
structopt = "0.2"
failure = "0.1.2"
lazy_static = "1.1.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["minwindef", "windef", "winuser"] }
