[package]
authors = ["Christopher Anderson <chris@nullcode.org>"]
edition = "2018"
name = "talan"
version = "0.5.0"

[dependencies]
config = "0.9.0"
regex = "1"
structopt = "0.2"
failure = "0.1.2"
pretty_env_logger = "0.2.4"
http = "0.1.13"
url = "1.7.1"
reqwest = "0.9.3"
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
lazy_static = "1.1.0"
log = "0.4.5"
linked_hash_set = "0.1.3"
bitflags = "1.0.4"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["minwindef", "windef", "winuser"] }
