[package]
name = "gui_support"
version = "0.1.0"
authors = ["Christopher Anderson <chris@nullcode.org>"]
edition = "2018"

[dependencies]
imgui = { git = "https://github.com/Gekkio/imgui-rs", rev="41be02" }
imgui-glium-renderer = { git = "https://github.com/Gekkio/imgui-rs", rev="41be02" }
imgui-winit-support = { git = "https://github.com/Gekkio/imgui-rs", rev="41be02" }
glium = "0.25.1"
clipboard = "0.5.0"
