[package]
name = "process"
version = "0.1.0"
authors = ["Christopher Anderson <chris@nullcode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
log = "0.4.11"
[dependencies.winapi]
version = '0.3.9'
features = [
    'errhandlingapi',
    'impl-default',
    'memoryapi',
    'minwindef',
    'processthreadsapi',
    'psapi',
    'securitybaseapi',
    'tlhelp32',
    'winbase',
    'windef',
    'winnt',
    'winuser',
]
