[package]
authors = ["Christopher Anderson <chris@nullcode.org>"]
edition = "2018"
name = "talan"
version = "0.2.0"

[dependencies]
failure = "0.1.2"
glium = "0.24.0"
imgui = { git = "https://github.com/Gekkio/imgui-rs", rev="92ebcce" }
imgui-glium-renderer = { git = "https://github.com/Gekkio/imgui-rs", rev="92ebcce" }
imgui-winit-support = { git = "https://github.com/Gekkio/imgui-rs", rev="92ebcce" }
linked_hash_set = "0.1.3"
log = "0.4.5"
pretty_env_logger = "0.2.4"
regex = "1"
serde = "1.0.92"
serde_json = "1.0.39"
tempfile = "3.1.0"
walkdir = "2.2.7"
xiv = { path = "../xiv" }
xivapi = { path = "../xivapi" }
clap = "2.33.0"
simple_logger = "1.3.0"
