[package]
authors = ["Christopher Anderson <chris@nullcode.org>"]
build = "build.rs"
edition = "2018"
name = "talan"
version = "0.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
failure = "0.1.2"
imgui = { git = "https://github.com/Gekkio/imgui-rs", rev="f476c3d" }
linked_hash_set = "0.1.3"
log = "0.4.5"
regex = "1"
serde = "1.0.92"
serde_json = "1.0.39"
tempfile = "3.1.0"
walkdir = "2.2.7"
xiv = { path = "../xiv" }
xivapi = { path = "../xivapi" }
gui_support = { path = "../gui-support" }
clipboard = "0.5.0"
once_cell = "1.2.0"
lazy_static = "1.4.0"
toml = "0.5.3"
structopt = "0.3.3"
env_logger = "0.7.0"
