[package]
authors = ["Christopher Anderson <chris@nullcode.org>"]
build = "build.rs"
edition = "2018"
name = "talan"
version = "0.4.2"

[dependencies]
anyhow = "1.0.26"
clipboard = "0.5.0"
env_logger = "0.7.1"
lazy_static = "1.4.0"
log = "0.4.8"
once_cell = "1.3.1"
serde = "1.0.104"
serde_json = "1.0.46"
structopt = "0.3.9"
toml = "0.5.6"

[dependencies.gui_support]
path = "../gui-support"

[dependencies.imgui]
git = "https://github.com/Gekkio/imgui-rs"
rev = "41be02"

[dependencies.xiv]
path = "../xiv"

[dependencies.xivapi]
path = "../xivapi"

[target."cfg(windows)".build-dependencies]
winres = "0.1.11"
