[package]
name = "ventures"
build = "build.rs"
version = "0.1.0"
authors = ["Christopher Anderson <chris@nullcode.org>"]
edition = "2018"

[dependencies]
xiv = { path = "../xiv" }
env_logger = "0.7.1"
log = "0.4.8"
structopt = "0.3.9"
anyhow = "1.0.31"
process = { path = "../process" }
chrono = "0.4.13"

[target."cfg(windows)".build-dependencies]
winres = "0.1.11"
