[package]
name = "xiv"
version = "0.1.0"
authors = ["Christopher Anderson <'chris@nullcode.org'>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
pretty_env_logger = "0.2.4"
lazy_static = "1.1.0"
log = "0.4.5"
linked_hash_set = "0.1.3"
bitflags = "1.0.4"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["minwindef", "windef", "winuser"] }
